--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gulp-cli": "^2.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "leaflet": "^1.5.1"
   }
 }
