--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-cli": "^2.2.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "leaflet": "^1.5.1",
+    "leaflet-draw": "^1.0.4",
+    "leaflet.measurecontrol": "^1.1.0"
   },
-  "dependencies": {
-    "leaflet": "^1.5.1"
-  }
+  "dependencies": {}
 }
